--- a/loli.html
+++ b/loli.html
@@ -262,13 +262,13 @@
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item ">
                                     <div class="has-popup folio-item__thumb">
-                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Clopez.png" title="Clopez" data-size="905x1280">
-                                            <img width="563.5" src="assets/img/project/project3/Clopez.png" srcset="assets/img/project/project3/Clopez.png 2x, assets/img/project/project3/Clopez.png 4x" alt="Commission">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Senko.png" title="Senko" data-size="905x1280">
+                                            <img width="663.5" src="assets/img/project/project1/Senko.png" srcset="assets/img/project/project1/Senko.png.png 2x, assets/img/project/project1/Senko.png 4x" alt="Smol Character">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/Commission</div>
-                                        <h4 class="folio-item__title">Clopez</h4>
+                                        <div class="folio-item__cat">illustration/Loli</div>
+                                        <h4 class="folio-item__title">Senko</h4>
                                     </div>
                                     <a target=”blank” href="https://twitter.com/kikiis_art/status/1535642693409222656?s=20&t=urf_zqpBX5PrhsG2Eu94hg" title="Twitter" class="folio-item__project-link">Twitter</a>
                                     <div class="folio-item__caption">
@@ -278,20 +278,19 @@
                             </div>
 
                             <div class="column" data-aos="fade-up">
-                                <div class="folio-item">
+                                <div class="folio-item ">
                                     <div class="has-popup folio-item__thumb">
-                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/E.png" title="E" data-size="905x1280">
-                                            <img width="512.9" src="assets/img/project/project3/E.png" srcset="assets/img/project/project3/E.png 1x, assets/img/project/project3/E.png" alt="Commission">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Clopez.png" title="Clopez" data-size="905x1280">
+                                            <img width="539.5" src="assets/img/project/project3/Clopez.png" srcset="assets/img/project/project3/Clopez.png 2x, assets/img/project/project3/Clopez.png 4x" alt="Smol Character">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/Commission</div>
-                                        <h4 class="folio-item__title">Extinction!</h4>
+                                        <div class="folio-item__cat">illustration/Loli</div>
+                                        <h4 class="folio-item__title">Clopez</h4>
                                     </div>
-
-                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1482311566645432323?s=20&t=urf_zqpBX5PrhsG2Eu94hg" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1535642693409222656?s=20&t=urf_zqpBX5PrhsG2Eu94hg" title="Twitter" class="folio-item__project-link">Twitter</a>
                                     <div class="folio-item__caption">
-                                        <p>Extinction</p>
+                                        <p>Clopez</p>
                                     </div>
                                 </div>
                             </div>
@@ -299,13 +298,13 @@
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
-                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Mia.png" title="Squili" data-size="500x500">
-                                            <img width="664.5" src="assets/img/project/project3/Mia.png" srcset="assets/img/project/project3/Mia.png 4x, assets/img/project/project3/Mia.png 4x" alt="Commission">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.png" title="Gura" data-size="500x500">
+                                            <img width="588.5" src="assets/img/project/project1/GuraTweetEdited.png" srcset="assets/img/project/project1/GuraTweetEdited.png 4x, assets/img/project/project1/GuraTweetEdited.png 4x" alt="Smol Character">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/Commission</div>
-                                        <h4 class="folio-item__title">Squili!</h4>
+                                        <div class="folio-item__cat">illustration/Loli</div>
+                                        <h4 class="folio-item__title">Gura!</h4>
                                     </div>
                                     <a target=”blank” href="https://twitter.com/kikiis_art/status/1523378511867957249?s=20&t=urf_zqpBX5PrhsG2Eu94hg" title="Twitter" class="folio-item__project-link">Twitter</a>
 
@@ -313,7 +312,22 @@
                             </div>
 
                             <!-- end column -->
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Twig1.jpg" title="Twig" data-size="500x500">
+                                            <img width="664.5" src="assets/img/project/project1/Twig1.jpg" srcset="assets/img/project/project1/Twig1.jpg 4x, assets/img/project/project1/Twig1.jpg 4x" alt="Smol Character">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/Loli</div>
+                                        <h4 class="folio-item__title">Twig!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1523378511867957249?s=20&t=urf_zqpBX5PrhsG2Eu94hg" title="Twitter" class="folio-item__project-link">Twitter</a>
 
+                                </div>
+                            </div>
+                            <!-- end column -->
                             <!-- folio-list -->
                         </div>
                     </section>
