--- a/Commissions.html
+++ b/Commissions.html
@@ -329,7 +329,7 @@
 
                 <div class="next-project v-dark-head p-relative h-v-100 over-hidden">
                     <div class="bg w-100 h-100 p-absolute over-hidden z-index-0 before-z-index" data-overlay="6">
-                        <img src="assets/img/project/project1/Cyanide's Ref Sheet blured.png" alt="" class="cover-bg-img">
+                        <img src="assets/img/project/project1/Senko.png" alt="" class="cover-bg-img">
                     </div>
                     <div class="next-project-inner dsn-container p-relative w-100 h-100 d-flex flex-column justify-content-center">
                         <div class="project-number p-absolute d-flex">
