--- a/Commissions.html
+++ b/Commissions.html
@@ -313,6 +313,23 @@
                             </div>
 
                             <!-- end column -->
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/CnBD.png" title="Squili" data-size="500x500">
+                                            <img width="563.3" src="assets/img/project/project3/CnBD.png" srcset="assets/img/project/project3/CnBD.png 4x, assets/img/project/project3CnBD.png 4x" alt="Commission">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/Commission</div>
+                                        <h4 class="folio-item__title">Clopez and Brom!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1585098608529244161?s=20&t=4ZbHC4o5l2fDe7KmKlUQIA" title="Twitter" class="folio-item__project-link">Twitter</a>
+
+                                </div>
+                            </div>
+
+                            <!-- end column -->
 
                             <!-- folio-list -->
                         </div>
