--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                 </div>
 
                                 <div class="work__item pt-80 pb-80 border-bottom">
-                                    <a href="" class="effect-ajax" data-dsn-ajax="work-hover" data-img="assets/img/project/project1/None.png">
+                                    <a href="loli.html" class="effect-ajax" data-dsn-ajax="work-hover" data-img="assets/img/project/project1/None.png">
                                         <span class="metas mb-25"><span> Loli</span></span>
 
                                         <h2 class="work__item-text">
