--- a/loli.html
+++ b/loli.html
@@ -250,7 +250,13 @@
                             <img src="assets/img/scroll_down.svg" alt="">
                         </div>
                     </header>
-                    <!--=== End Header Project Full With & content bottom ===-->
+                    <hr>
+                    <center>
+                        <h1>NONE</h1>
+                    </center>
+
+
+                    <!--
 
                     <section id="portfolio" class="s-portfolio over-hidden">
                         <br>
@@ -294,7 +300,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- End column-->
+                          
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
@@ -311,7 +317,6 @@
                                 </div>
                             </div>
 
-                            <!-- end column -->
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
@@ -327,51 +332,52 @@
 
                                 </div>
                             </div>
-                            <!-- end column -->
-                            <!-- folio-list -->
-                        </div>
-                    </section>
-                    <!-- end s-portfolio -->
-
-
-
-
-
-
-                    <!-- ========== End box vertical Section ========== -->
+                          
+                        -->
+                    <!-- folio-list -->
                 </div>
+                </section>
+                <!-- end s-portfolio -->
 
-                <div class="next-project v-dark-head p-relative h-v-100 over-hidden">
-                    <div class="bg w-100 h-100 p-absolute over-hidden z-index-0 before-z-index" data-overlay="6">
-                        <img src="assets/img/project/project1/Cyanide's Ref Sheet blured.png" alt="" class="cover-bg-img">
+
+
+
+
+
+                <!-- ========== End box vertical Section ========== -->
+            </div>
+
+            <div class="next-project v-dark-head p-relative h-v-100 over-hidden">
+                <div class="bg w-100 h-100 p-absolute over-hidden z-index-0 before-z-index" data-overlay="6">
+                    <img src="assets/img/project/project1/Cyanide's Ref Sheet blured.png" alt="" class="cover-bg-img">
+                </div>
+                <div class="next-project-inner dsn-container p-relative w-100 h-100 d-flex flex-column justify-content-center">
+                    <div class="project-number p-absolute d-flex">
+                        <h6>Page</h6>
+                        <span class="curent">2</span>
+                        <span class="full">6</span>
                     </div>
-                    <div class="next-project-inner dsn-container p-relative w-100 h-100 d-flex flex-column justify-content-center">
-                        <div class="project-number p-absolute d-flex">
-                            <h6>Page</h6>
-                            <span class="curent">2</span>
-                            <span class="full">6</span>
+                    <div class="metas d-inline-block mt-30 right-0 p-absolute top-0 dsn-container">
+                        <span>keep scrolling down</span>
+                    </div>
+                    <a href="loli.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
+                        <h2 class="title section-padding p-relative ">
+                            <span class="title-stroke">Smol Character/Loli</span>
+                            <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">Smol Character/Loli</span>
+                        </h2>
+                    </a>
+                    <div class="case">
+                        <div class="p-absolute w-100 h-100 ">
+                            <img class="cover-bg-img" src="assets/img/case.svg" alt="keep scrolling down">
                         </div>
-                        <div class="metas d-inline-block mt-30 right-0 p-absolute top-0 dsn-container">
-                            <span>keep scrolling down</span>
-                        </div>
-                        <a href="loli.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
-                            <h2 class="title section-padding p-relative ">
-                                <span class="title-stroke">Smol Character/Loli</span>
-                                <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">Smol Character/Loli</span>
-                            </h2>
-                        </a>
-                        <div class="case">
-                            <div class="p-absolute w-100 h-100 ">
-                                <img class="cover-bg-img" src="assets/img/case.svg" alt="keep scrolling down">
-                            </div>
-                            <strong class="title-block heading-color number v-middle">
+                        <strong class="title-block heading-color number v-middle">
                                     100%
                                 </strong>
-                        </div>
                     </div>
                 </div>
-
             </div>
+
+        </div>
         </div>
         </div>
     </main>
