--- a/oc_commissions.html
+++ b/oc_commissions.html
@@ -142,7 +142,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="work.html">
+                                    <a href="Commissions.html">
                                         <span class="dsn-title-menu">Commission</span>
                                     </a>
                                 </li>
@@ -152,7 +152,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="work.html">
+                                    <a href="loli.html">
                                         <span class="dsn-title-menu">Smol Characters / Loli</span>
                                     </a>
                                 </li>
