--- a/Fanart.html
+++ b/Fanart.html
@@ -118,6 +118,14 @@
                             </a>
                         </li>
 
+                        <li>
+                            <a href="CommStatus.html">
+                                <span class="dsn-title-menu">Commission status</span>
+
+                                <span class="dsn-bg-arrow"></span>
+                            </a>
+                        </li>
+
                         <li class="dsn-drop-down">
                             <a href="#" class="user-no-selection">
                                 <span class="dsn-title-menu">Artworks</span>
