--- a/allart.html
+++ b/allart.html
@@ -150,7 +150,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="Commissions.html">
+                                    <a href="work.html">
                                         <span class="dsn-title-menu">Commission</span>
                                     </a>
                                 </li>
@@ -160,7 +160,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="loli.html">
+                                    <a href="work.html">
                                         <span class="dsn-title-menu">Smol Characters / Loli</span>
                                     </a>
                                 </li>
@@ -239,7 +239,7 @@
 
                         <div class="project-number p-absolute dsn-container d-flex">
                             <h6>Page</h6>
-                            <span class="curent">3</span>
+                            <span class="curent">1</span>
                             <span class="full">6</span>
                         </div>
                         <div class="d-flex  dsn-hero-parallax-title align-items-end  dsn-container pb-40 pt-80">
@@ -248,11 +248,11 @@
                                     <div id="dsn-hero-title" class="intro-title">
                                         <div class="metas d-inline-block mb-20">
                                             <span>illustrations</span>
-                                            <span>Paid Work</span>
+                                            <span>Artwork</span>
                                         </div>
                                         <div class="p-relative dsn-hero-parallax-title">
                                             <h1 data-dsn-ajax="title">
-                                                Commissions
+                                                All Artworks
                                             </h1>
                                         </div>
                                     </div>
@@ -275,17 +275,17 @@
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item ">
                                     <div class="has-popup folio-item__thumb">
-                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Clopez.png" title="Clopez" data-size="905x1280">
-                                            <img width="563.5" src="assets/img/project/project3/Clopez.png" srcset="assets/img/project/project3/Clopez.png 2x, assets/img/project/project3/Clopez.png 4x" alt="Commission">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.png" title="Gura" data-size="905x1280">
+                                            <img width="563.5" src="assets/img/project/project1/GuraTweetEdited.png" srcset="assets/img/project/project1/GuraTweetEdited.png 2x, assets/img/project/project1/GuraTweetEdited.png 4x" alt="Recent Works">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/Commission</div>
-                                        <h4 class="folio-item__title">Clopez</h4>
+                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <h4 class="folio-item__title"> Gawr Gura!</h4>
                                     </div>
-                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1535642693409222656?s=20&t=urf_zqpBX5PrhsG2Eu94hg" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1450081152870408194" title="Twitter" class="folio-item__project-link">Twitter</a>
                                     <div class="folio-item__caption">
-                                        <p>Clopez</p>
+                                        <p>Gawr Gura</p>
                                     </div>
                                 </div>
                             </div>
@@ -293,18 +293,18 @@
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
-                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/E.png" title="E" data-size="905x1280">
-                                            <img width="512.9" src="assets/img/project/project3/E.png" srcset="assets/img/project/project3/E.png 1x, assets/img/project/project3/E.png" alt="Commission">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraChristmas.png" title="Gura" data-size="905x1280">
+                                            <img width="563.5" src="assets/img/project/project1/GuraChristmas.png" srcset="assets/img/project/project1/GuraChristmas.png 1x, assets/img/project/project1/GuraChristmas.png" alt="Recent Works">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/Commission</div>
-                                        <h4 class="folio-item__title">Extinction!</h4>
+                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <h4 class="folio-item__title">Gura Christmas Ver!</h4>
                                     </div>
 
-                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1482311566645432323?s=20&t=urf_zqpBX5PrhsG2Eu94hg" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <a target=”blank” href="#0" title="Twitter" class="folio-item__project-link">None</a>
                                     <div class="folio-item__caption">
-                                        <p>Extinction</p>
+                                        <p>FanArt</p>
                                     </div>
                                 </div>
                             </div>
@@ -312,32 +312,15 @@
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
-                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Mia.png" title="Squili" data-size="500x500">
-                                            <img width="664.5" src="assets/img/project/project3/Mia.png" srcset="assets/img/project/project3/Mia.png 4x, assets/img/project/project3/Mia.png 4x" alt="Commission">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Rushia Completed.png" title="Rushia" data-size="500x500">
+                                            <img width="529.5" src="assets/img/project/project1/Rushia Completed.png" srcset="assets/img/project/project1/Rushia Completed.png 4x, assets/img/project/project1/Rushia Completed.png 4x" alt="Rushia">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/Commission</div>
-                                        <h4 class="folio-item__title">Squili!</h4>
+                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <h4 class="folio-item__title">Rushia!</h4>
                                     </div>
-                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1523378511867957249?s=20&t=urf_zqpBX5PrhsG2Eu94hg" title="Twitter" class="folio-item__project-link">Twitter</a>
-
-                                </div>
-                            </div>
-
-                            <!-- end column -->
-                            <div class="column" data-aos="fade-up">
-                                <div class="folio-item">
-                                    <div class="has-popup folio-item__thumb">
-                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/CnBD.png" title="Squili" data-size="500x500">
-                                            <img width="563.3" src="assets/img/project/project3/CnBD.png" srcset="assets/img/project/project3/CnBD.png 4x, assets/img/project/project3CnBD.png 4x" alt="Commission">
-                                        </a>
-                                    </div>
-                                    <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/Commission</div>
-                                        <h4 class="folio-item__title">Clopez and Brom!</h4>
-                                    </div>
-                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1585098608529244161?s=20&t=4ZbHC4o5l2fDe7KmKlUQIA" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1497909722334531584?s=20&t=D62vw5_mOP6JkZyomEomNg" title="Twitter" class="folio-item__project-link">Twitter</a>
 
                                 </div>
                             </div>
@@ -359,21 +342,21 @@
 
                 <div class="next-project v-dark-head p-relative h-v-100 over-hidden">
                     <div class="bg w-100 h-100 p-absolute over-hidden z-index-0 before-z-index" data-overlay="6">
-                        <img src="assets/img/project/project1/Senko.png" alt="" class="cover-bg-img">
+                        <img src="assets/img/project/project1/TheEnd.png" alt="" class="cover-bg-img">
                     </div>
                     <div class="next-project-inner dsn-container p-relative w-100 h-100 d-flex flex-column justify-content-center">
                         <div class="project-number p-absolute d-flex">
                             <h6>Page</h6>
-                            <span class="curent">2</span>
+                            <span class="curent">6</span>
                             <span class="full">6</span>
                         </div>
                         <div class="metas d-inline-block mt-30 right-0 p-absolute top-0 dsn-container">
-                            <span>keep scrolling down</span>
+                            <span>End of the category</span>
                         </div>
-                        <a href="loli.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
+                        <a href="#" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
                             <h2 class="title section-padding p-relative ">
-                                <span class="title-stroke">Smol Character/Loli</span>
-                                <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">Smol Character/Loli</span>
+                                <span class="title-stroke">End</span>
+                                <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">End</span>
                             </h2>
                         </a>
                         <div class="case">
@@ -510,7 +493,7 @@
                 </a>
             </li>
             <li>
-                <a href="" target="_blank">
+                <a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=kikiis_art" target="_blank">
                     <i class="fab fa-twitter"></i>
                     <span>Tw</span>
                 </a>
