--- a/CommStatus.html
+++ b/CommStatus.html
@@ -104,15 +104,15 @@
 
 
                     <li class="dsn-drop-down">
-                        <a href="project1.html" class="user-no-selection">
+                        <a href="about.html" class="user-no-selection">
                             <span class="dsn-title-menu">About</span>
                         </a>
 
 
 
                         <li>
-                            <a href="services.html">
-                                <span class="dsn-title-menu">Commission Help</span>
+                            <a href="TOS.html">
+                                <span class="dsn-title-menu">Terms and Service</span>
 
                                 <span class="dsn-bg-arrow"></span>
                             </a>
@@ -162,6 +162,11 @@
                                 <li>
                                     <a href="loli.html">
                                         <span class="dsn-title-menu">Smol Characters / Loli</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="allart.html">
+                                        <span class="dsn-title-menu">All Artworks</span>
                                     </a>
                                 </li>
 
