--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
 
 
                     <li class="dsn-drop-down">
-                        <a href="project1.html" class="user-no-selection">
+                        <a href="about.html" class="user-no-selection">
                             <span class="dsn-title-menu">About</span>
                         </a>
 
 
 
                         <li>
-                            <a href="services.html">
-                                <span class="dsn-title-menu">Commission Help</span>
+                            <a href="TOS.html">
+                                <span class="dsn-title-menu">Terms and Service</span>
 
                                 <span class="dsn-bg-arrow"></span>
                             </a>
@@ -146,6 +146,11 @@
                                 <li>
                                     <a href="loli.html">
                                         <span class="dsn-title-menu">Smol Characters / Loli</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="allart.html">
+                                        <span class="dsn-title-menu">All Artworks</span>
                                     </a>
                                 </li>
 
@@ -233,7 +238,7 @@
                                                         <a href="#" class="effect-ajax" data-dsn-ajax="slider">Welcome!</a>
                                                     </h1>
 
-                                                    <p class="max-w570 mt-30 description ">Scroll down and pick a category from bellow options to view my work!</p>
+                                                    <p class="max-w570 mt-30 description ">Scroll down and pick a category from bellow options to view my work!<br></p>
                                                 </div>
                                             </div>
 
@@ -382,7 +387,7 @@
                                 </div>
 
                                 <div class="work__item pt-80 pb-80 border-bottom">
-                                    <a href="project5.html" class="effect-ajax" data-dsn-ajax="work-hover" data-img="assets/img/project/project1/user_profile.png">
+                                    <a href="allart.html" class="effect-ajax" data-dsn-ajax="work-hover" data-img="assets/img/project/project1/user_profile.png">
                                         <span class="metas mb-25"><span> Everything</span></span>
 
                                         <h2 class="work__item-text">
@@ -415,7 +420,7 @@
                                 Want to commission me.. click this button for it!
                             </p>
 
-                            <a data-dsn-title="End" href="#0" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                            <a data-dsn-title="End" href="https://discord.gg/RFxCn4cWwa" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
                                 <span class="dsn-border border-color-reverse-color"></span> Commission <span>⟶</span>
                             </a>
 
@@ -485,7 +490,7 @@
 
             <!-- ========== Contact Form Model ========== -->
             <div class="contact-btn">
-                <div class="contact-btn-txt">Commission me?</div>
+                <div class="contact-btn-txt">Want to commission me?</div>
             </div>
             <div class="contact-modal background-section">
                 <div class="contact-container h-100 w-100 border-right">
