--- a/oc_commissions.html
+++ b/oc_commissions.html
@@ -104,19 +104,19 @@
 
 
                     <li class="dsn-drop-down">
-                        <a href="project1.html" class="user-no-selection">
+                        <a href="about.html" class="user-no-selection">
                             <span class="dsn-title-menu">About</span>
                         </a>
 
 
-
                         <li>
-                            <a href="services.html">
-                                <span class="dsn-title-menu">Commission Help</span>
+                            <a href="TOS.html">
+                                <span class="dsn-title-menu">Terms and Service</span>
 
                                 <span class="dsn-bg-arrow"></span>
                             </a>
                         </li>
+
 
                         <li>
                             <a href="CommStatus.html">
@@ -162,6 +162,11 @@
                                 <li>
                                     <a href="loli.html">
                                         <span class="dsn-title-menu">Smol Characters / Loli</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="allart.html">
+                                        <span class="dsn-title-menu">All Artworks</span>
                                     </a>
                                 </li>
 
@@ -234,7 +239,7 @@
 
                         <div class="project-number p-absolute dsn-container d-flex">
                             <h6>Page</h6>
-                            <span class="curent">1</span>
+                            <span class="curent">2</span>
                             <span class="full">6</span>
                         </div>
                         <br>
