--- a/TOS.html
+++ b/TOS.html
@@ -442,7 +442,7 @@
 
             <!-- ========== Contact Form Model ========== -->
             <div class="contact-btn">
-                <div class="contact-btn-txt">Commission me?</div>
+                <div class="contact-btn-txt">Want to commission me?</div>
             </div>
             <div class="contact-modal background-section">
                 <div class="contact-container h-100 w-100 border-right">
