--- a/allart.html
+++ b/allart.html
@@ -326,6 +326,153 @@
                             </div>
 
                             <!-- end column -->
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item ">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Clopez.png" title="Clopez" data-size="905x1280">
+                                            <img width="563.5" src="assets/img/project/project3/Clopez.png" srcset="assets/img/project/project3/Clopez.png 2x, assets/img/project/project3/Clopez.png 4x" alt="Commission">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/Commission</div>
+                                        <h4 class="folio-item__title">Clopez</h4>
+                                    </div>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1535642693409222656?s=20&t=urf_zqpBX5PrhsG2Eu94hg" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <div class="folio-item__caption">
+                                        <p>Clopez</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--- End Column-->
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/E.png" title="E" data-size="905x1280">
+                                            <img width="512.9" src="assets/img/project/project3/E.png" srcset="assets/img/project/project3/E.png 1x, assets/img/project/project3/E.png" alt="Commission">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/Commission</div>
+                                        <h4 class="folio-item__title">Extinction!</h4>
+                                    </div>
+
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1482311566645432323?s=20&t=urf_zqpBX5PrhsG2Eu94hg" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <div class="folio-item__caption">
+                                        <p>Extinction</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- End column-->
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Mia.png" title="Squili" data-size="500x500">
+                                            <img width="664.5" src="assets/img/project/project3/Mia.png" srcset="assets/img/project/project3/Mia.png 4x, assets/img/project/project3/Mia.png 4x" alt="Commission">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/Commission</div>
+                                        <h4 class="folio-item__title">Squili!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1523378511867957249?s=20&t=urf_zqpBX5PrhsG2Eu94hg" title="Twitter" class="folio-item__project-link">Twitter</a>
+
+                                </div>
+                            </div>
+
+                            <!-- end column -->
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/CnBD.png" title="Squili" data-size="500x500">
+                                            <img width="563.3" src="assets/img/project/project3/CnBD.png" srcset="assets/img/project/project3/CnBD.png 4x, assets/img/project/project3CnBD.png 4x" alt="Commission">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/Commission</div>
+                                        <h4 class="folio-item__title">Clopez and Brom!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1585098608529244161?s=20&t=4ZbHC4o5l2fDe7KmKlUQIA" title="Twitter" class="folio-item__project-link">Twitter</a>
+
+                                </div>
+                            </div>
+
+                            <!-- end column -->
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item ">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNew Transparent.png" title="Cyanide" data-size="905x1280">
+                                            <img width="517.3" height="500" src="assets/img/project/project2/CyanideNew Transparent.png" srcset="assets/img/project/project2/CyanideNew Transparent.png 2x, assets/img/project/project2/CyanideNew Transparent.png 4x" alt="Commissioned Piece">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">OC Commission</div>
+                                        <h4 class="folio-item__title">Cyanide!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1537504500717867009?s=20&t=Oy96VLzBATWBasYRjes_xw" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <div class="folio-item__caption">
+                                        <p>Cyanide</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item ">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" title="Cyanide" data-size="905x1280">
+                                            <img width="517.3" src="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" srcset="assets/img/project/project2/CyanideNewNoJacketTransparemt.png 2x, assets/img/project/project2/CyanideNewNoJacketTransparemt.png 4x" alt="Commissioned Piece">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">OC Commission</div>
+                                        <h4 class="folio-item__title">Cyanide without jacket!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://www.pixiv.net/en/artworks/95052320" title="PIXIV" class="folio-item__project-link">Pixiv</a>
+                                    <div class="folio-item__caption">
+                                        <p>Cyanide</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                          
+                            <!--End Column-->
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item ">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl jacket.png" title="Rymm" data-size="905x1280">
+                                            <img width="663.5" src="assets/img/project/project2/owl jacket.png" srcset="assets/img/project/project2/owl jacket.png 2x, assets/img/project/project2/owl jacket.png 4x" alt="Commissioned Piece">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">OC Commission</div>
+                                        <h4 class="folio-item__title">Rymm!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://www.pixiv.net/en/artworks/100153458" title="Pixiv" class="folio-item__project-link">PIXIV</a>
+                                    <div class="folio-item__caption">
+                                        <p>Rymm</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item ">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl.png" title="Rymm" data-size="905x1280">
+                                            <img width="663.5" src="assets/img/project/project2/owl.png" srcset="assets/img/project/project2/owl.png 2x, assets/img/project/project2/owl.png 4x" alt="Commissioned Piece">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">OC Commission</div>
+                                        <h4 class="folio-item__title">Rymm without jacket!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://www.pixiv.net/en/artworks/100153458" title="Pixiv" class="folio-item__project-link">PIXIV</a>
+                                    <div class="folio-item__caption">
+                                        <p>Rymm</p>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            </div>
 
                             <!-- folio-list -->
                         </div>
